--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -14,15 +14,40 @@
 
   .book-container {
     padding: 2px;
+    position: relative;
+
+    &:hover .hover-data {
+      opacity: 1;
+    }
+
+    &.hidden {
+      display: none;
+    }
   }
 
   .cover {
     width: 100%;
     display: block;
     box-shadow: 0 2px 8px -4px fade(black, 10%);
+  }
 
-    &:hover {
-      transform: scale(1.2);
-    }
+  .hover-data {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: black;
+    background: fade(white, 70%);
+    padding: 12px;
+    border: 6px solid teal;
+    .gotham();
+    font-size: 22px;
+    font-weight: bold;
+    transition: opacity .2s linear;
   }
 }
