--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -51,11 +51,56 @@ main.concierge {
   }
 }
 
+.books {
+  flex: 1;
+  @corner: 4px;
+
+  .view-controls {
+    text-align: right;
+    padding: 12px 0;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  input[type="radio"] {
+    .sr-only;
+
+    & + label {
+      display: block;
+      padding: 8px;
+      border: 1px solid teal;
+      background: white;
+      color: teal;
+    }
+
+    &:checked + label {
+      background: teal;
+      color: white;
+    }
+
+    &:first-child + label {
+      border-radius: @corner 0 0 @corner;
+    }
+  }
+
+  label:last-child {
+    border-radius: 0 @corner @corner 0;
+  }
+
+  .book-list {
+    display: none;
+  }
+
+  &[data-mode="list"] {
+    .book-shelf { display: none; }
+    .book-list { display: block; }
+  }
+}
+
 .book-shelf {
   columns: 4;
   column-gap: 1px;
   line-height: 1;
-  flex: 1;
 
   @media (min-width: 1200px) {
     columns: 5;
