--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -1,204 +1,11 @@
 @import "base";
 
-.sr-only {
-  clip: inset;
-  width: 1px;
-  height: 1px;
-  position: absolute;
-  left: -1000px;
-}
-
 main.concierge {
   display: flex;
   margin: auto;
   max-width: 1000px;
 }
 
-.filters {
-  flex: 0 0 200px;
-  padding: 4px;
-
-  fieldset {
-    border: none;
-    margin: 0;
-    padding: 12px 0;
-  }
-
-  input[type="checkbox"] {
-    .sr-only;
-
-    & + label {
-      display: block;
-      background: white;
-      color: #888;
-      padding: 4px;
-      .gotham();
-      position: relative;
-      cursor: pointer;
-      text-transform: uppercase;
-    }
-
-    &:checked + label {
-      background: teal;
-      color: white;
-
-      &::after {
-        content: "×";
-        position: absolute;
-        right: 4px;
-      }
-    }
-  }
-}
-
-.books {
-  flex: 1;
-  @corner: 4px;
-
-  [data-mode="book"] & {
-    display: none;
-  }
-
-  .view-controls {
-    text-align: right;
-    padding: 12px 0;
-    display: flex;
-    justify-content: flex-end;
-  }
-
-  input[type="radio"] {
-    .sr-only;
-
-    & + label {
-      display: block;
-      padding: 8px;
-      border: 1px solid teal;
-      background: white;
-      color: teal;
-    }
-
-    &:checked + label {
-      background: teal;
-      color: white;
-    }
-
-    &:first-child + label {
-      border-radius: @corner 0 0 @corner;
-    }
-  }
-
-  label:last-child {
-    border-radius: 0 @corner @corner 0;
-  }
-}
-
-.book-list {
-  display: none;
-
-  [data-mode="list"] & {
-    display: block;
-  }
-}
-
-.book-shelf {
-  display: none;
-  columns: 4;
-  column-gap: 1px;
-  line-height: 1;
-
-  [data-mode="covers"] & {
-    display: block;
-  }
-
-  @media (min-width: 1200px) {
-    columns: 5;
-  }
-
-  @media @mobile {
-    columns: 2;
-  }
-
-  .book-container {
-    position: relative;
-    width: 100%;
-    display: inline-block;
-    cursor: pointer;
-    background: #EEE;
-
-    &:hover {
-      .hover-data {
-        opacity: 1;
-      }
-
-      .cover {
-        filter: blur(2px);
-      }
-    }
-
-    &.hidden {
-      display: none;
-    }
-
-    &.placeholder {
-      background: lightgray;
-
-      &::after {
-        content: "";
-        display: block;
-        padding-bottom: 140%;
-      }
-    }
-
-    .colorized(@c, @i) {
-      &:nth-child(6n + @{i}) { background: @c }
-    }
-
-    .colorized(blanchedalmond, 0);
-    .colorized(honeydew, 1);
-    .colorized(lavenderblush, 2);
-    .colorized(lemonchiffon, 3);
-    .colorized(darkseagreen, 4);
-    .colorized(thistle, 5)
-  }
-
-  .cover-container {
-    width: 100%;
-    padding-bottom: 120%;
-  }
-
-  .cover {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: block;
-  }
-
-  .hover-data {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    color: black;
-    background: fade(white, 80%);
-    padding: 12px;
-    border: 6px solid teal;
-    .gotham();
-    font-size: 14px;
-    transition: opacity .2s linear;
-  }
-}
-
-.book-panel {
-  display: none;
-
-  [data-mode="book"] & {
-    display: block;
-  }
-}
+@import "filters";
+@import "catalog";
+@import "book";
