--- a/src/css/covers.less
+++ b/src/css/covers.less
@@ -43,7 +43,8 @@
       transition: all .5s ease-in-out;
     }
 
-    &:hover {
+    &:hover,
+    &:focus {
       .hover-data {
         opacity: 1;
       }
