Switch years to a radio button
The load lag for multiple years is getting crazy, let's cut back a
little.

--- a/src/css/filters.less
+++ b/src/css/filters.less
@@ -8,7 +8,7 @@
     padding: 12px 0;
   }
 
-  input[type="checkbox"] {
+  input[type="checkbox"], input[type="radio"] {
     .sr-only;
 
     & + label {
@@ -33,4 +33,6 @@
       }
     }
   }
+
+  input[type="radio"]:checked + label:after { content: ""; }
 }
