--- a/src/css/filters.less
+++ b/src/css/filters.less
@@ -36,6 +36,8 @@
 
     &:checked + label {
       background: @accent;
+      background: var(--accent);
+      transition: background .3s linear;
       color: white;
 
       &::after {
