--- a/src/css/theming.less
+++ b/src/css/theming.less
@@ -14,6 +14,7 @@
 .setup-year(@year, @accent, @header) {
   body[data-year="@{year}"] {
     --accent: @accent;
+    --accent-spin: spin(@accent, 20%);
     --header: @header;
   };
 }
