Generate 13-digit ISBNs during shelving

--- a/src/css/filters.less
+++ b/src/css/filters.less
@@ -39,9 +39,9 @@
     }
 
     &:checked + label {
-      background: white;
+      background: fade(black, 50%);
       // background: var(--accent);
-      color: #333;
+      // color: #333;
 
       &::after {
         content: "×";
