Add book header images

--- a/src/css/theming.less
+++ b/src/css/theming.less
@@ -1,15 +1,15 @@
+@header-2013: darken(#f2ece2, 30%);
 @accent-2013: #cd4932;
-@header-2013: #f2ece2;
-@accent-2014: #74b7a9;
 @header-2014: #7c99c9;
-@accent-2015: #74b7a9;
+@accent-2014: spin(#7c99c9, -20%);
 @header-2015: #45798a;
+@accent-2015: #74b7a9;
+@header-2016: spin(#399868, 20%);
 @accent-2016: #399868;
-@header-2016: @accent-2015;
-@accent-2017: #b53765;
 @header-2017: #dd5d36;
-@accent-2018: #1097c3;
+@accent-2017: #b53765;
 @header-2018: @accent-2018;
+@accent-2018: #1097c3;
 
 .setup-year(@year, @accent, @header) {
   body[data-year="@{year}"] {
