--- a/src/css/header.less
+++ b/src/css/header.less
@@ -1,6 +1,7 @@
 header.hero {
   background: @accent;
   background: var(--header);
+  background-image: url(./assets/books-header.png);
   transition: background .3s linear;
   padding: 60px 40px;
   color: white;
