--- a/src/css/covers.less
+++ b/src/css/covers.less
@@ -55,8 +55,8 @@
       transition: all .5s ease-in-out;
     }
 
-    &:hover,
-    &:focus {
+    & a:hover,
+    & a:focus {
       .hover-data {
         opacity: 1;
       }
