--- a/src/partials/_head.html
+++ b/src/partials/_head.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
-<title><%= project.title %></title>
+<title><%= project.title %> : NPR</title>
 
 <!-- Favicon -->
 <link rel="apple-touch-icon" sizes="180x180" href="https://media.npr.org/templates/favicon/favicon-180x180.png" />
@@ -31,7 +31,12 @@
 <meta property="og:url" content="<%= project.url %>">
 <meta property="og:image" content="<%= project.url + project.image %>">
 <meta property="og:description" content="<%= project.description %>">
-<meta property="fb:app_id" content="138837436154588"/>
+
+<!-- Facebook-specific meta -->
+<meta property="fb:app_id" content="138837436154588">
+<meta property="article:opinion" content="false">
+<meta property="article:content_tier" content="free">
+<meta property="fb:pages" content="10643211755">
 
 <!-- Google structured data -->
 <script type="application/ld+json">
