Integrate chatter from sheet

--- a/src/css/catalog.less
+++ b/src/css/catalog.less
@@ -30,12 +30,12 @@
   .section-header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
+    padding-bottom: 12px;
   }
 
   .view-controls {
     text-align: right;
-    padding: 12px 0;
     display: flex;
     justify-content: flex-end;
 
