--- a/src/css/header.less
+++ b/src/css/header.less
@@ -6,6 +6,10 @@ header.hero {
   padding: 60px 40px;
   color: white;
 
+  @media @mobile {
+    padding: 60px 12px;
+  }
+
   .books-home {
     color: white;
     text-decoration: none;
