--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -9,7 +9,11 @@ main.concierge {
   margin: auto;
   max-width: 2000px;
   .gotham();
-  padding: 60px 16px;
+  padding: 60px 40px;
+
+  @media @mobile {
+    padding: 60px 12px;
+  }
 }
 
 h3 {
