--- a/src/css/theming.less
+++ b/src/css/theming.less
@@ -10,6 +10,8 @@
 @accent-2017: #b53765;
 @header-2018: @accent-2018;
 @accent-2018: #1097c3;
+@header-2019: #666;
+@accent-2019: #808;
 
 .setup-year(@year, @accent, @header) {
   body[data-year="@{year}"] {
@@ -25,3 +27,4 @@
 .setup-year(2016, @accent-2016, @header-2016);
 .setup-year(2017, @accent-2017, @header-2017);
 .setup-year(2018, @accent-2018, @header-2018);
+.setup-year(2019, @accent-2019, @header-2019);
