Sort tags, ignore "the" in list view

--- a/src/css/catalog.less
+++ b/src/css/catalog.less
@@ -72,6 +72,7 @@
       color: @accent;
       border-color: var(--accent);
       color: var(--accent);
+      cursor: pointer;
 
       rect {
         fill: @accent;
