Refactor cover rendering
* Shuffle is stable based on title/author
* Remove DOM elements for inactive years
* Simplify rendering flow
* Disable filter events during loading

--- a/src/css/header.less
+++ b/src/css/header.less
@@ -63,6 +63,11 @@ header.hero {
   fieldset {
     border: none;
     padding: 0;
+
+    .loading & {
+      pointer-events: none;
+    }
+
     input[type="checkbox"], input[type="radio"] {
       .sr-only;
 
