--- a/src/css/values.less
+++ b/src/css/values.less
@@ -2,6 +2,7 @@
 @mobile: ~"(max-width: 500px)";
 @mobile-above: ~"(min-width: 501px)";
 @tablet: ~"(max-width: 768px)";
+@tablet-above: ~"(min-width: 769px)";
 
 // Fonts
 @gotham: 'Gotham SSm', Helvetica, Arial, sans-serif;
